Name:		hxournal-store
Version:	0.0
Synopsis:	xournal file storing database structure
Description: 	xournal file storing database structure for hxournal program
License: 	BSD3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Type: 	Simple
Cabal-Version:  >= 1.8
data-files:     


Executable hxournal-store
  Main-is: hxournal-store.hs
  hs-source-dirs: exe
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: 
                   base>4, mtl>2, directory, filepath,
                   cmdargs, hxournal-store

Library
  hs-source-dirs: lib
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: 
                   base == 4.*, 
                   mtl == 2.*, 
                   directory, 
                   filepath,
                   cmdargs >= 0.7 && < 0.10, 
                   configurator == 0.2.*, 
                   uuid == 1.2.*, 
                   process == 1.0.*
  Exposed-Modules: 
                   Database.HXournal.Store.ProgType
                   Database.HXournal.Store.Job
                   Database.HXournal.Store.Command
                   Database.HXournal.Store.Config
  Other-Modules: 

 
		 